[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/SourceSansPro-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="Score" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 100.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.980392, 0.952941, 0.952941, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="BestScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 322.0
margin_top = 4.0
margin_right = 426.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0.980392, 0.952941, 0.952941, 1 )
custom_fonts/font = SubResource( 2 )
text = "Best:"
align = 1

[node name="BestValue" type="Label" parent="BestScore"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 66.0
margin_top = 1.0
margin_right = 170.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0.980392, 0.952941, 0.952941, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
